amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  * add: Audioproperties are loaded as you scroll the playlist and get saved to playlist files
  * add: If trackname column is hidden, the title column will show the trackname until a title
         tag can replace it. If no title tag is found the trackname stays.
  * chg: Pressing "back" in Random Mode now works as expected and walks backwards
         through the list of recently played songs.
  * add: TitleProxy searches for a free local port (added by Stefan Gehn)
  * chg: Random Mode now stores the recently played songs in a buffer, which prevents
         playing the same songs too often.
  * add: "Play Next" context menu option
  * add: selected aRts-effects will be remembered on next program start, including settings
  * fix: sort numerical playlist columns in correct order
  * add: logarithmic fading algorithm makes crossfading smoother
  * add: Select a series of tracks, start inline tag-editing a tag and amaroK will prompt you to
         edit that tag for all tracks one-by-one. Also available: fill-down.
  * add: improved crossfading: will fade out smoothly when the stop button is pressed
  * fix: O(n) behavior for playlist scrolling fixed
  * add: setting to make playlist colours the KDE defaults
  * add: support for tag-editing directly in playlist
  * chg: replaced old FileBrowser with the comfortable fileselector from KDevelop
  * add: hide/show selected playlist columns
  * chg: upgrade streambrowser to kderadiostation 0.5
  * fix: many streams not loading from browser and AddItem dialog
  * chg: amaroK moved out of kdenonbeta. we are now member of KDE Extra Gear 1
  * add: on-screen-display (OSD), shows an overlay with information on the currently playing track
  * chg: use KMultiTabBar for browser selection
  * chg: migrated settings system to KConfig XT
  * add: playlist columns for length and bitrate